[package]
name = "pull-request"
version = "0.1.0"
authors = ["Keir Lawson <keirlawson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hubcaps = { git = "https://github.com/keirlawson/hubcaps", branch = "repo-forking" }
futures = "0.1"
tokio = "0.1"
rustygit = "0.2.1"
tempdir = "0.3"
url = "2"
log = "0.4"