[package]
name = "pull-request"
version = "0.1.0"
authors = ["Keir Lawson <keirlawson@gmail.com>"]
edition = "2018"

[dependencies]
hubcaps = { git = "https://github.com/keirlawson/hubcaps", branch = "repo-forking" }
futures = "0.1"
tokio = "0.1"
rustygit = "0.2.6"
tempfile = "3"
url = "2"
log = "0.4"
thiserror = "1"
structopt = { version = "0.3", optional = true }
pretty_env_logger = { version = "0.3.1", optional = true }
human-panic = { version = "1.0.1", optional = true }
toml = { version = "0.5", optional = true }

[features]
default = []
cli = ["structopt", "pretty_env_logger", "human-panic", "toml"]

[[bin]]
name = "pullreq"
path = "src/main.rs"
required-features = ["cli"]

[badges]
travis-ci = { repository = "keirlawson/pull-request", branch = "master" }
